--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <meta property="og:title" content="X">
     <meta property="og:description" content="Xでバイラル体験をしよう">
     <meta property="og:type" content="website">
+
+ <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JFRGN7YJYB6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JFRGN7YJYB6');
+  </script>
     
     <!-- AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1106158066306697"
